--- a/templates/someform.html
+++ b/templates/someform.html
@@ -62,6 +62,15 @@
             {% endfor %}
         	</div>
 
+            <div class = "form-group">
+            {{ form.confirm_password.label(class_="text-primary") }} 
+            {{ form.confirm_password(class_="form-control mb-3") }}
+
+            {% for error in form.confirm_password.errors %}
+                <code class = "text-danger small">{{ error }}</code>
+            {% endfor %}
+            </div>
+
             <input class="btn btn-outline-primary mt-3" type="submit" value="Post">
         </form>
 
