--- a/templates/someform.html
+++ b/templates/someform.html
@@ -10,7 +10,9 @@
 </head>
 
 <body>
-    <div class="container"> <h3>Flask WTForms Example</h3>
+    <div class="container"> 
+
+        <h3 class = "my-4">Flask WTForms Example</h3>
 
 
         <form method="POST" action="">
@@ -71,7 +73,7 @@
             {% endfor %}
             </div>
 
-            <input class="btn btn-outline-primary mt-3" type="submit" value="Post">
+            <input class="btn btn-outline-primary mt-2" type="submit" value="Post">
         </form>
 
 
