Added Float and Integer validators with examples.

--- a/templates/someform.html
+++ b/templates/someform.html
@@ -82,6 +82,24 @@
             {% endfor %}
             </div>
 
+            <div class = "form-group">
+            {{ form.age.label(class_="text-primary") }} 
+            {{ form.age(class_="form-control mb-3", type="number") }}
+
+            {% for error in form.age.errors %}
+                <code class = "text-danger small">{{ error }}</code>
+            {% endfor %}
+            </div>
+
+            <div class = "form-group">
+            {{ form.height.label(class_="text-primary") }} 
+            {{ form.height(class_="form-control mb-3", type="number", step="0.1") }}
+
+            {% for error in form.height.errors %}
+                <code class = "text-danger small">{{ error }}</code>
+            {% endfor %}
+            </div>
+
             <input class="btn btn-outline-primary mt-2" type="submit" value="Post">
         </form>
 
